--- a/ArtifactIdAppium/test-output/index.html
+++ b/ArtifactIdAppium/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse--2038529632\testng-customsuite.xml</span>
+                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-149244494\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.appium.scripts.SK_LoginInstalledApp" hash-for-method="launchApp">launchApp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.appium.scripts.SK_SOSInstalledApp" hash-for-method="SOS">SOS</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.appium.scripts.SK_LoginInstalledApp</span>
+              <span class="class-name">com.appium.scripts.SK_SOSInstalledApp</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="launchApp">
-                  </a> <!-- launchApp -->
-                  <span class="method-name">launchApp</span>
+                  <a name="SOS">
+                  </a> <!-- SOS -->
+                  <span class="method-name">SOS</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse--2038529632\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-149244494\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.appium.scripts.SK_LoginInstalledApp&quot;/&gt;
+      &lt;class name=&quot;com.appium.scripts.SK_SOSInstalledApp&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchApp')
-data.setCell(0, 2, 'com.appium.scripts.SK_LoginInstalledApp')
-data.setCell(0, 3, 30441);
+data.setCell(0, 1, 'SOS')
+data.setCell(0, 2, 'com.appium.scripts.SK_SOSInstalledApp')
+data.setCell(0, 3, 27038);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,11 +219,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.appium.scripts.SK_LoginInstalledApp</div> <!-- chronological-class-name -->
-              <div class="test-method">
+              <div class="chronological-class-name">com.appium.scripts.SK_SOSInstalledApp</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
                 <span class="method-name">launchApp</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-method before">
+                <span class="method-name">Login</span>
+                <span class="method-start">30208 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">SOS</span>
+                <span class="method-start">87652 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">logOutApp</span>
+                <span class="method-start">114695 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
