--- a/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
+++ b/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>19/08/03 11:52:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_TimerIncident.TimerIncident()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">TimerIncident</td> 
+<tr bgcolor="c4639c">  <td>19/08/03 17:12:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_CreateAccount.createAccount()[pri:1, instance:com.appium.scripts.SK_IA_CreateAccount@2d8f65a4]">createAccount</td> 
   <td>main@1489069835</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/03 11:50:43</td>   <td>-123700</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_TimerIncident.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&gt;&gt;launchApp</td> 
+<tr bgcolor="c4639c">  <td>19/08/03 17:12:12</td>   <td>-39091</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_CreateAccount.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@2d8f65a4]">&gt;&gt;launchApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/03 11:59:02</td>   <td>375627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_TimerIncident.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&lt;&lt;logOutApp</td> 
+<tr bgcolor="c4639c">  <td>19/08/03 17:16:01</td>   <td>190512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_CreateAccount.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@2d8f65a4]">&lt;&lt;logOutApp</td> 
 <td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/03 11:51:41</td>   <td>-65189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_TimerIncident.signInApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&gt;&gt;signInApp</td> 
+<tr bgcolor="c4639c">  <td>19/08/03 17:12:48</td>   <td>-2458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_CreateAccount.pageTitle()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@2d8f65a4]">&gt;&gt;pageTitle</td> 
 <td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
 </table>
