--- a/ArtifactIdAppium/test-output/old/Suite/methods-alphabetical.html
+++ b/ArtifactIdAppium/test-output/old/Suite/methods-alphabetical.html
@@ -1,36 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e4beb6">  <td>19/08/05 10:56:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_SOS.Login()[pri:0, instance:com.appium.scripts.SK_IA_SOS@27a8c74e]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="e4beb6">  <td>19/08/05 10:56:58</td>   <td>56132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_SOS.SOS()[pri:0, instance:com.appium.scripts.SK_IA_SOS@27a8c74e]">SOS</td> 
-  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>19/08/05 11:06:28</td>   <td>626240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_Timer.TimerIncident()[pri:0, instance:com.appium.scripts.SK_IA_Timer@436e852b]">TimerIncident</td> 
-  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b56393">  <td>19/08/05 10:58:26</td>   <td>144159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_CreateAccount.createAccount()[pri:1, instance:com.appium.scripts.SK_IA_CreateAccount@7e2d773b]">createAccount</td> 
-  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="e4beb6">  <td>19/08/05 10:55:27</td>   <td>-35642</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_SOS.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_SOS@27a8c74e]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b56393">  <td>19/08/05 10:57:34</td>   <td>92116</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_CreateAccount.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@7e2d773b]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b3b3e6">  <td>19/08/05 11:02:41</td>   <td>398912</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_SafeWalk.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_SafeWalk@631330c]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>19/08/05 11:04:52</td>   <td>530270</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_Timer.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_Timer@436e852b]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="e4beb6">  <td>19/08/05 10:57:24</td>   <td>81647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_SOS.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_SOS@27a8c74e]">&lt;&lt;logOutApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b56393">  <td>19/08/05 11:02:35</td>   <td>392792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_CreateAccount.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@7e2d773b]">&lt;&lt;logOutApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b3b3e6">  <td>19/08/05 11:04:45</td>   <td>522727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_SafeWalk.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_SafeWalk@631330c]">&lt;&lt;logOutApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>19/08/05 11:14:19</td>   <td>1096328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_Timer.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_Timer@436e852b]">&lt;&lt;logOutApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b56393">  <td>19/08/05 10:58:20</td>   <td>138233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_CreateAccount.pageTitle()[pri:0, instance:com.appium.scripts.SK_IA_CreateAccount@7e2d773b]">&gt;&gt;pageTitle</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b3b3e6">  <td>19/08/05 11:04:19</td>   <td>496683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_SafeWalk.safeWalk()[pri:0, instance:com.appium.scripts.SK_IA_SafeWalk@631330c]">safeWalk</td> 
-  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="b3b3e6">  <td>19/08/05 11:03:20</td>   <td>437763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_SafeWalk.signInApp()[pri:0, instance:com.appium.scripts.SK_IA_SafeWalk@631330c]">&gt;&gt;signInApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>19/08/05 11:05:28</td>   <td>566256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_Timer.signInApp()[pri:0, instance:com.appium.scripts.SK_IA_Timer@436e852b]">&gt;&gt;signInApp</td> 
-<td>&nbsp;</td>  <td>main@1188753216</td>   <td></td> </tr>
+<tr bgcolor="efef64">  <td>19/08/05 15:00:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_SOS.SOS()[pri:0, instance:com.appium.AppScripts.SK_IA_SOS@1b68ddbd]">SOS</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="efef64">  <td>19/08/05 15:00:14</td>   <td>-2819</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_SOS.launchApp()[pri:0, instance:com.appium.AppScripts.SK_IA_SOS@1b68ddbd]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>19/08/05 15:00:17</td>   <td>225</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_SafeWalk.launchApp()[pri:0, instance:com.appium.AppScripts.SK_IA_SafeWalk@3cb1ffe6]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>19/08/05 15:00:18</td>   <td>1285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_SafeWalk.safeWalk()[pri:0, instance:com.appium.AppScripts.SK_IA_SafeWalk@3cb1ffe6]">safeWalk</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
 </table>
